horizontal scroll issue resolved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 body {
+    overflow-x: hidden;
     margin:0;
     padding:0;
     font-family: 'Times New Roman', Times, serif;
@@ -26,6 +27,11 @@ body {
     nav a {
     text-decoration:none;
     color:gold;
+    }
+    #wrap{
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
     }
     p{
     margin-left:5%;
@@ -221,4 +227,9 @@ body {
     nav li {
     font-size:16px;
     }
+    }
+    @media(max-width: 400px;){
+        *{
+           
+        }
     }
